Add books page and move pagination logic to repo (#35)
1. Books component is added
2. Books page is implemented
3. Styles are changed
4. Pagination logic is moved from service to DAO layer
5. Monolith application build is implemented